# HemoCell

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG_old.md  CMakeLists.txt  CONTRIB.md  FAQ.md  HemoCellFunctional.h  LICENSE  Makefile  Makefile.cineca  Makefile.toTest  RBC.vtk  README  README.md  SConstruct  TODO.md  bloodyCells.cpp  cellForceChecking3D.h  cellForceChecking3D.hh  cellInShearFlow3D.h  cellInShearFlow3D.hh  cellModel3D.h  cellModel3D.hh  cellQuantities.h  cellQuantities.hh  cellQuantities3D.h  cellQuantities3D.hh  cellStretching3D.hh  cellStretchingForces3D.h  cellStretchingForces3D.hh  cellsInit.h  cellsInit.hh  collectiveCellReductions.h  collectiveCellReductions.hh  computeCellForces3D.h  computeCellForces3D.hh  config-tmp.xml  config.xml  (+49 more)
cases/: CMakeLists.txt  CMakeLists_template.txt  Makefile  README.md  WBC_HO_template.xml  cellInShearFlow3D.h  cellInShearFlow3D.hh  cellStretching3D.h  cellStretching3D.hh  cellStretchingForces3D.h  cellStretchingForces3D.hh  rbcDisaggregation.h  rbcDisaggregation.hh  sickleCellForce3D.h
cases/AR2/: AR2.cpp  AR2.sh  CMakeLists.txt  PLT.pos  config.xml  pipeflow_with_preinlet.cpp  shortoutlet_AR2_rotated.stl
cases/AR2_pulsatile/: AR2_pulsatile.cpp  AR2_pulse.sh  CMakeLists.txt  config.xml  pulse_vel_normalized.txt
cases/AR2_stiff/: AR2_stiff.cpp  RBC.pos  RBC.xml  config.xml
cases/CEPAC/: CEPAC.cpp  CMakeLists.txt  PLT.pos  PLT.xml  RBC_HO.pos  config.xml
cases/IBM/: caseA_dragForce.cpp  caseB_viscosity.cpp  caseC_shearCollision.cpp  caseD_lubrication.cpp  make.all.sh
cases/atherosclerosis/: CMakeLists.txt  PLT.pos  RBC.pos  RBC_HO.xml  atherosclerosis.cpp  config.xml
cases/bifurcation/: Bifurcation_step5.stl  CMakeLists.txt  PLT.pos  RBC_HO.pos  bifurcation.cpp  config.xml
cases/capillary/: CMakeLists.txt  WBC_HO.pos  WBC_HO.xml  capillary.cpp  compile.sh  config.xml
cases/capillary_lykov/: CMakeLists.txt  Readme.md  WBC_HO.xml  capillary_lykov.cpp  compile.sh  config.xml
cases/cellCollision/: CMakeLists.txt  PLT.xml  cellCollision.cpp  compile.sh  config.xml  plot_centroids.py
cases/cellCollision_inner_viscosity/: CMakeLists.txt  PLT.pos  RBC_HO.xml  cellCollision_inner_viscosity.cpp  config.xml
cases/cellCollision_interior_viscosity/: RBC_HO.pos  cellCollision_interior_viscosity.cpp  config.xml
cases/cellCollision_sphere/: CMakeLists.txt  ELL.pos  ELL.xml  ELL2.pos  ELL2.xml  cellCollision_sphere.cpp  config.xml
cases/flowaroundsphere/: CMakeLists.txt  PLT.xml  config.xml  flowaroundsphere.cpp
cases/flowaroundsphere_preinlet_create/: CMakeLists.txt  RBC_HO.pos  config.xml  flowaroundsphere_preinlet_create.cpp
cases/flowaroundsphere_preinlet_use/: CMakeLists.txt  PLT.pos  RBC_HO.pos  config.xml  flowaroundsphere_preinlet_use.cpp
cases/flowchamber_GT_stenosis/: CMakeLists.txt  WBC_HO.xml  config.xml  flowchamber_stenosis.cpp
cases/flowchamber_stenosis/: flowchamber_stenosis.cpp
cases/fromSTL/: CMakeLists.txt  config.xml  fromSTL.cpp
cases/injured_vessel/: CMakeLists.txt  config.xml  injured_vessel.cpp  injured_vessel.stl
cases/kolmogorovFlow/: CMakeLists.txt  PLT.pos  PLT.xml  RBC.pos  clean.sh  config.xml  kolmogorovFlow.cpp  runClean.sh
cases/leesEdwards/: CMakeLists.txt  RBC_HO.pos  RBC_HO.xml  config.xml  leesEdwards.cpp
cases/margination/: CMakeLists.txt  Makefile  config.xml
cases/microcontraction/: CMakeLists.txt  config.xml  microcontraction.cpp
cases/microcontraction_preinlet_create/: CMakeLists.txt  PLT.pos  config.xml  microcontraction_preinlet_create.cpp
cases/microcontraction_preinlet_use/: CMakeLists.txt  config.xml  microcontraction_preinlet_use.cpp
cases/microcontraction_steep/: CMakeLists.txt  PLT.xml  cartesius_batch_template.sh  config.xml  microcontraction_steep.cpp
cases/microvessel_bended/: CMakeLists.txt  PLT.pos  PLT.xml  RBC.pos  config.xml  microvessel_bended.cpp
cases/oneCellShear/: CMakeLists.txt  PLT.pos  PLT.xml  RBC_HO_tt.pos  RBC_MALARIA.pos  RBC_MALARIA.xml  README  config.xml  oneCellShear.cpp
cases/onecellshear/: CMakeLists.txt  RBC_HO.pos  RBC_HO.xml  RBC_HO_tt.xml  cells.pos  compile.sh  config.xml  configHO.xml  configSU.xml  oneCellShear.cpp
cases/onecelltanktreading/: CMakeLists.txt  RBC_HO.xml  cells.pos  configHO.xml  oneCellTankTreading.cpp
cases/parachuting/: CMakeLists.txt  config.xml  parachuting.cpp
cases/performance_testing/: CMakeLists.txt  performance_testing.cpp
cases/pipeflow/: CMakeLists.txt  FluidHDF5toXMF.py  HDF5toXMF.py  PLT.xml  RBC_HO.xml  README  WBC_HO.xml  config.xml  configHO.xml  configSU.xml  hostfile.py  newflow.cpp  pipeflow.cpp  rankfile.py
cases/pipeflowMalaria/: CMakeLists.txt  PLT.pos  RBC_HO.pos  RBC_HO.xml  RBC_MALARIA.pos  RBC_MALARIA.xml  config.xml  job.sh  pipeflowMalaria.cpp
cases/pipeflow_interior_viscosity/: CMakeLists.txt  RBC_HO.xml  config.xml  pipeflow.cpp  pipeflow_interior_viscosity.cpp
cases/preinlet_create/: CMakeLists.txt  PLT.pos  RBC_HO.pos  config.xml  preinlet_create.cpp
cases/preinlet_shear/: CMakeLists.txt  config.xml  preinlet_shear.cpp
cases/preinlet_use/: CMakeLists.txt  config.xml  preinlet_use.cpp
cases/solidify_example/: CMakeLists.txt  PLT.pos  PLT.xml  config.xml  solidify_example.cpp
cases/stenosis/: CMakeLists.txt  PLT.pos  RBC_HO.pos  config.xml  stenosis.cpp
cases/stentflow/: CMakeLists.txt  PLT.xml  config.xml  stentflow.cpp
cases/stl_preinlet/: CMakeLists.txt  config.xml  stl_preinlet.cpp  tube.stl  tube_inverted.stl
cases/stretchCell/: CMakeLists.txt  RBC_HO.pos  RBC_HO.xml  README  WBC_HO.xml  cellStretch.cpp  compile.sh  config.xml  configHO.xml  configSU.xml  configSureshOrig.xml  runClean.sh  stretch.gpl  stretch173.gpl  stretch37.gpl  stretch87.gpl  stretchCell.cpp  stretchCreateXMLs.sh
cases/stretchCell_interior_viscosity/: CMakeLists.txt  config.xml  stretchCell_interior_viscosity.cpp
cases/stretchMalaria/: CMakeLists.txt  RBC_HO.xml  (+12 more)
examples/: CMakeLists.txt  Makefile  PLT_template.xml  RBC_template.xml  README.md
tests/: CMakeLists.txt  README.md  main.cpp  test_example.cpp  test_hemocell.cpp
(+822 files in other folders)
