add_subdirectory("atherosclerosis")
add_subdirectory("AR2")
add_subdirectory("AR2_pulsatile")
add_subdirectory("AR2_stiff")
add_subdirectory("cellCollision")
add_subdirectory("cellCollision_sphere")
add_subdirectory("CEPAC")
add_subdirectory("kolmogorovFlow")
add_subdirectory("leesEdwards")
add_subdirectory("microvessel_bended")
add_subdirectory("performance_testing")
add_subdirectory("pipeflowMalaria")
add_subdirectory("pipeflow_interior_viscosity")
add_subdirectory("preinlet_shear")
add_subdirectory("solidify_example")
add_subdirectory("stenosis")
add_subdirectory("stentflow")
add_subdirectory("stl_preinlet")
add_subdirectory("stretchCell_interior_viscosity")
add_subdirectory("stretchMalaria")
add_subdirectory("unbounded")
add_subdirectory("vasoconstriction_pipe")
