add_subdirectory("capillary")
add_subdirectory("cellCollision_interior_viscosity")
add_subdirectory("cell_shapes")
add_subdirectory("cube")
add_subdirectory("curvedflow_with_preinlet")
add_subdirectory("flowaroundsphere")
add_subdirectory("microcontraction")
add_subdirectory("oneCellShear")
add_subdirectory("parachuting")
add_subdirectory("pipeflow")
add_subdirectory("pipeflow_with_preinlet")
add_subdirectory("simple")
add_subdirectory("stretchCell")
